# Moonfin-Core

./: .gitignore  PRIVACY_POLICY.md  README.md  build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-web-plugin.sh  commit_msg.txt  pubspec.yaml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-update-aur.yml  build-tvos.yml  build-windows-arm64.yml  build.yml
android/: build.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  native_game_jni.c
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  PiPController.swift  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/game_host/: build_cores.sh  fetch_cores.sh  moonfin_game_host.podspec  wrap_frameworks.sh
lib/: app.dart  main.dart
lib/background/: watch_next_background.dart
lib/di/: injection.dart
lib/l10n/: app_af.arb  app_ar.arb  app_be.arb  app_bg.arb  app_bn.arb  app_ca.arb  app_cs.arb  app_cy.arb  app_da.arb  app_de.arb  app_el.arb  app_en-GB.arb  app_en.arb  app_en_GB.arb  app_eo.arb  app_es.arb  app_es_419.arb  app_es_AR.arb  app_es_DO.arb  app_es_MX.arb  app_et.arb  app_fa.arb  app_fi.arb  app_fr.arb  app_gl.arb  app_he.arb  app_hi.arb  app_hr.arb  app_hu.arb  app_id.arb  app_it.arb  app_ja.arb  app_kk.arb  app_kn.arb  app_ko.arb  app_localizations.dart  app_localizations_af.dart  app_localizations_ar.dart  app_localizations_be.dart  app_localizations_bg.dart  (+88 more)
lib/platform/: pip_service.dart
lib/playback/: appletv_game_player.dart  appletv_mpv_backend.dart  audio_capability_probe.dart  audio_capability_profile.dart  audio_handler.dart  car_artwork.dart  device_profile_builder.dart  headless_session_bootstrap.dart  html_video_backend_profile.dart  html_video_backend_web.dart  inline_preview_engine.dart  known_defects.dart  local_aware_player_service.dart  local_first_media_stream_resolver.dart  media3_player_backend.dart  media_browse_service.dart  media_kit_player_backend.dart  mpris_service.dart  native_game_player.dart  native_game_player_channel.dart  offline_playback_launcher.dart  offline_stream_resolver.dart  playback_lifecycle_handler.dart  playback_profile_diagnostics.dart  server_transcode_capabilities.dart  web_playback_capabilities_impl_web.dart  web_subtitle_overlay_web.dart
lib/preference/: home_section_config.dart  preference_constants.dart  seerr_preferences.dart  seerr_row_config.dart  user_preferences.dart
lib/syncplay/: syncplay_manager.dart  time_sync_manager.dart
lib/util/: app_distribution.dart  app_exit.dart  audio_track_logic.dart  extensions.dart  fullscreen_helper_io.dart  game_browse_filter.dart  game_core_licenses.dart  game_cores.dart  game_library.dart  (+14 more)
linux/: CMakeLists.txt
macos/: Podfile
native/libretro_host/: CMakeLists.txt  README.md  lh_audio.c  lh_audio.h  libretro_host.c  libretro_host.h  libretro_host.podspec
native/libretro_host/test/: stub_core.c  test_harness.c
patches/: flutter_inappwebview_windows-0.6.0-texture_bridge.patch
test/: add_server_dialog_test.dart  book_document_epub_images_test.dart  custom_external_lists_service_test.dart  pin_entry_dialog_test.dart
web/: index.html
windows/: CMakeLists.txt  firebase_core_stub.cpp
(+510 files in other folders)
